@@ -360,7 +360,8 @@
     - Update www/agc/dispo_send_email.php: Added --A--RUSfullname--B-- special
         variable flag.
   * Correct typo:
-    - bin/AST_CRON_WallBoard3_gen.php.
+    - bin/AST_CRON_WallBoard3_gen.php,
+      extras/MySQL_AST_CREATE_tables.sql.
 
 2.25.27
   [Jörg Fring-Fürst]
